fix: overflow on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,6 @@ main video{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 450px;
   text-align: center;
   display: flex;
   flex-direction: column;
